--- a/style.css
+++ b/style.css
@@ -69,3 +69,19 @@ p {
 a {
     color: #0066ff;
 }
+
+.header {
+    text-align: center;
+    padding: 80px 20px 60px;
+}
+
+.header h1 {
+    font-size: 3.5rem;
+    margin: 0;
+}
+
+.header p {
+    margin-top: 15px;
+    font-size: 1.2rem;
+    color: #555;
+}
