--- a/style.css
+++ b/style.css
@@ -85,3 +85,20 @@ a {
     font-size: 1.2rem;
     color: #555;
 }
+
+.footer {
+    margin-top: 80px;
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #777;
+}
+
+.footer a {
+    color: #0066ff;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
